--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.1.0",
+    "helmet": "^7.0.0",
+    "helmut": "^1.0.1",
+    "mongodb": "^5.8.1",
     "morgan": "^1.10.0",
-    "node": "^19.8.1",
-    "nodemon": "^2.0.22"
+    "node": "^20.5.1",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "nodemon index.js"
